src/scss/style.scss
/////////////////////////////// Main //// //////////////////////////////

* {
  padding: 0;
  margin: 0;
}

body {
  background-color: #1D2731;
  font-family: 'Muli', sans-serif;
  font-weight: 600;
  color: white;
}

a {
  color: orange;
}

a:hover {
  color: #6121fd !important;
}

h1 {

}

h2 {
  color: white;
  text-align: center;
  color: white;
  font-size: 1rem;
  font-weight: 600;
  margin: 20px 0 20px 0;
  text-transform: uppercase;
}

.userShowSection h2 {
  text-align: left;
  font-weight: 900;
}

.userShowSection h3 {
  text-transform: uppercase;
  font-weight: 500;
}

h3 {
  color: white;
  font-size: 1rem;
  font-weight: 400;
  margin: 20px 0 10px 0;
}

h4 {
  font-weight: 400;
  font-size: 0.75rem;
}

// using h5 for the modal forms
h5 {
  font-size: 0.75rem;
  text-align: center;
  font-size: 1rem;
  text-transform: uppercase;
  font-weight: 900;
  margin: 2px 0 2px 0;
}

p {
  font-size: 0.8rem;
  padding: 4px;
  text-align: left;

}

label {
  font-weight: 400;
  font-size: 0.75rem;
}

.tag {
  margin: 2px;
  background-color: #6121fd !important;
  color: white !important;
}

hr {
  background-color: #e8e8e8;
  border: none;
  display: block;
  height: 2px;
  margin: 0 !important;
  /* margin: 1.5rem 0; */
}

/////////////////////////// Login & Register page //////////////////////////////

.loginSection, .registerSection {
  background-color: #1D2731;
  color: #ffffff;
  margin: 30px auto 0;
}

.loginSection {
  height: 100vh;
  padding-top: 50px;
  width: 75%;
}

.registerSection {
  height: 170vh;
  width: 75%;
  padding-top: 50px;
}

.loginSection p, .registerSection p {
  text-align: center;
}

.profilePicRegister {
  height: 200px;
  width: 200px;
  border-radius: 100%;
  margin: 0 auto;
}

.showPassword {
  text-align: left !important;
  display: inline;
}

.checkbox {
  padding: 5px;
}

////////////////////////////////// Common /////////////////////////////////////

// filestack
.filestackButton {
  width: 100%;
  max-width: 550px;
  margin: 0 auto;
  background-color: transparent;
  color: white;
  margin: 5px 0 10px 0;
  border-radius: 20px;
  height: 40px;
  font-size: 0.8rem;
  text-align: center;
  line-height: 1.5;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  text-transform: uppercase;
  border: 2px #b721ff solid;
  font-weight: 400;
}

.validation {
  background-color: #d04646;
  color: white;
  border-radius: 5px;
  display: block;
  font-size: 0.7rem;
  font-weight: 400;
}


/////////////////////////// Edit User Profile //////////////////////////////////

.editProfile {
  background-color: #1D2731;
  color: #ffffff;
  height: auto;
  top: 0;
  width: 80%;
  margin: 0 auto;
}

.profilePic {
  height: 150px;
  width: 150px;
  border-radius: 100%;
}

.deleteUserAccountButton, .deleteImageButton {
  border-radius: 20px;
  font-weight: 600;
  text-transform: uppercase;
  border: 1px solid #6121fd;
  background-color: transparent;
  transition: all .2s ease-in-out;
  color: #6121fd;
  padding: 10px;
  width: 100%;
  max-width: 550px;
  margin-top: 50px;
  cursor: pointer;
}

////////////////////////////// Show User Profile ///////////////////////////////

.userShowSection {
  padding-top: 100px;
  width: 100wh;
}

.socialMediaLinks {
  display: inline-flex;
}

// font awesome
.envelopeIcon {
  font-size: 30px;
  display: inline-block;
  margin-left: 10px;
}

.envelope {
  display: block;
  opacity: 0.8;
  transition: all .3s ease-in-out;
}

.envelope:hover {
  opacity: 0.8;
  transform: scale(1.3);
}

.facebook, .pinterest, .instagram, .flickr {
  height: 30px;
  width: 30px;
  background-size: cover;
  margin: 5px;
  transition: all .3s ease-in-out;
}

.facebook:hover, .pinterest:hover, .instagram:hover, .flickr:hover {
  opacity: 0.8;
  transform: scale(1.6);
}

.facebook {
  background-image: url("/assets/facebook.svg");
}

.pinterest {
  background-image: url("/assets/pinterest.svg");
}

.instagram {
  background-image: url("/assets/instagram.svg");
}

.flickr {
  background-image: url("/assets/flickr.svg");
}

.interests {
  padding-bottom: 30px;
}

.userDescription {
  // width: 80%;
  // margin: 0 auto;
}

.reviewsSection {
  // width: 100%;
  // max-width: 400px;
  // margin: 0 auto;
}

// Portfolio

.portfolioSection {
  width: 100%;
  // background-color: white;
  height: auto;
  // overflow: scroll;
}

.portfolioImage {
  border-radius: 10px;
  transition: all .3s ease-in-out;
}

.img.react-reveal.portfolioImage :hover {
  opacity: 0.8;
  transform: scale(1.6);
}



////////////////////////////////// Upload Image ////////////////////////////////

.uploadImageSection {
  background-color: #1D2731;
  color: #ffffff;
  height: 100vh;
  top: 0;
  padding-top: 50px;
}

.editProfile .input:focus, .uploadImageSection .input:focus, input:focus {
  border: 2px #b721ff solid;
}

.select {
  font-size: 1rem;
  width: 100%;
  background-color: transparent;
  color: white;
  margin: 5px 0 10px 0;
  border-radius: 40px !important;
  border: 1px white solid;
  height: 40px;
}


////////////////////////////////// Users Index Section /////////////////////////

.usersIndexSection {
  background-color: #1D2731;
  color: #ffffff;
  height: 100vh;
  padding-top: 50px;
  width: 100wh;
}

.location {
  width: 20px;
  height: 20px;
}

.userIndexBtn {
  width: 100px;
  height: 40px;
  border: 2px #6121fd solid;
  background-color: transparent;
  text-transform: uppercase;
  font-weight: 500;
  color: #6121fd;
  margin-top: 10px;
  margin-bottom: 10px;
  cursor: pointer;
  transition: 0.4s;
}

.userIndexBtn:hover {
  background-color: #6121fd;
  color: white;
}

.form {
  background-color: #1D2731;
  color: #ffffff;
  top: 0;
  max-width: 550px;
  width: 100%;
  margin: 0 auto;
}

.userType {
  text-transform: uppercase;
  font-weight: 500;
  text-align: center;
}

.input {
  background-color: transparent;
  color: white;
  margin: 5px 0 10px 0;
  border-radius: 20px;
  height: 40px;
  font-family: 'Muli', sans-serif;
  font-size: 0.9rem;
}

.input:focus {
  border: 2px #b721ff solid;
}

input::placeholder {
  color: #c7c7c799 !important;
}

.button {
  border-radius: 20px;
  margin: 20px 0 10px 0;
  font-weight: 600;
  text-transform: uppercase;
  background: linear-gradient(100deg, #b721ff, #6121fd);
  border: none;
  transition: all .2s ease-in-out;
}

.button:hover {
  background: linear-gradient(100deg, #6121fd, #b721ff);
  transform: scale(1.05);
}

// Show image page
.showImage {
  background-color: #1D2731;
  color: #ffffff;
}

.comments {
  border-radius: 40px;
  padding: 2px;
  margin: 10px 0 10px 0;
}

// .deleteUserAccountBtn {
//   margin-top: 60px;
// }

.map {
  height: 500px;
  width: 100%;
}

.leaflet-popup-content {
  text-align: center;
}

.editProfile .profilePic {
  height: 200px;
  width: 200px;
  border-radius: 100%;
  margin: 0 auto;
  margin-top: -10px;
}

.discover {
  background-image: url("https://static1.squarespace.com/static/576ef902d1758ef2e6dada3d/576f03126a4963e880312dde/583dcd12e6f2e18631e93ba6/1480445534612/IMG_2157.JPG?format=2500w");
  height: 300px;
  background-size: cover;
}

// User Index Page

.usersIndexSection {
  background-color: white;
}

.FilterByTypeSection, .SortByLocationSection, .filterByDistanceSection, .searchBarSection {
  padding: 5px;
  margin: 5px;
}

.filterByDistanceSection .field {
  display: inline-block;
}

.searchBar {
  margin-top: 30px;
  margin: 0 auto;
  border-radius: 5px;
}

.columns {
  // justify-content: space-between;
}

.userIndexImage {
  position: relative;
  margin: 0 auto;
  border-radius: 10px;
  height: 200px;
}

.userIndex {
  background-color: #f9f9f9;
  opacity: 1;
  border-radius: 10px;
  color: #273440;
  // height: 500px;
  text-align: center;
}

.userReviews, .userComments {
  background-color: #273440;
  border-radius: 30px;
  margin: 20px;
  color: white;
}

.isDisliked {
  color: #708192;
  font-size: 40px;
  transition: 0.5s;
}

.isLiked {
  color: red;
  font-size: 40px;
  transition: 0.5s;
}

.userProfilePic {
  height: 80px;
  width: 80px;
  border-radius: 100%;
  border: 2px white solid;
}


// Home page

.homeSection {
  height: 100vh;
}

.split-top {
  background-image: url("https://stylewhack.com/wp-content/uploads/2017/11/IMG_0720.jpg");
  background-size: cover;
  height: 50vh;
  position: relative;
}

.split-bottom {
  background-image: url("https://static1.squarespace.com/static/576ef902d1758ef2e6dada3d/576f03126a4963e880312dde/583dcce7b3db2b24516db747/1480445534740/IMG_0439.JPG?format=2500w");
  background-size: cover;
  height: 50vh;
  position: relative;
}

.homeBtn {
  top: 50%;
  left: 50%;
  position: absolute;
  padding: 20px;
  background-color: white;
}


// Navbar

.logo {
  background-image: url('../assets/logo.png');
  background-size: contain;
  height: 27px;
  width: 80px;
}

.logo-brand {
  background-image: url('../assets/logo-brand.png');
  background-size: contain;
  height: 45px;
  width: 55px;
}


.navbar {
  background-color: #273440;
  position: fixed;
  width: 100%;
  height: 30px;
  top: 0;
  border-bottom: 1px solid #708192;
}

.navbar-menu {
  background-color: #273440;
}

.navbar-brand {
  align-items: center;
  // padding-left: 20px;
}

.navbar-burger {

}

.navbar-item {
  color: white;
  font-weight: 600;
  text-align: right;
  padding-right: 20px;
}

.navbar-item:hover {
  background-color: #273440 !important;
}

.navbar-item a {
  font-size: 0.7rem !important;
}

.navbar-item a:hover {

}

.logoutButton {
  background: linear-gradient(100deg, #6121fd, #b721ff);
}

// .discoverButton {
//   text-align: center;
//   border: 2px solid #6121fd;
//   background-color: transparent;
//   padding: 0 !important;
//   margin: 0 !important;
// }

.discoverButton a {
  text-transform: uppercase !important;
}


// Modal
.modal-card-foot {
  background-color: white;
  border: none;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.modal-card-body {
  background-color: white;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.modal-card-foot .modalButton {
  width: 150px;
  height: 50px;
  margin: 0 auto;
  border: 2px solid #6121fd;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 1rem;
  transition: 0.5s;
}

.modal-card-foot .modalButton:hover {
  background-color: #6121fd;
  color: white;
  cursor: pointer;
}





// loader
.lds-ring {
  display: inline-block;
  position: relative;
  width: 64px;
  height: 64px;
}

.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 51px;
  height: 51px;
  margin: 6px;
  border-radius: 50%;
  border: 6px solid;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: #6121fd transparent transparent transparent;
  // border-color: linear-gradient(100deg, #b721ff, #6121fd);
}

.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}

.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}

.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}

@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

